Correction qu.1 Maths + début qu.2

--- a/Projet Probabilités.ipynb
+++ b/Projet Probabilités.ipynb
@@ -81,19 +81,18 @@
     "\n",
     "Par linéarité de l'espérance,\n",
     "\n",
-    "$$\\mathbb E (X_t | (X_{t-1} = x_{t-1})) = A\\mathbb E (x_{t-1}) + \\mathbb E (\\varepsilon_t) = Ax_{t-1}$$\n",
+    "$$\\mathbb E [X_t | (X_{t-1} = x_{t-1})] = A\\mathbb E [x_{t-1}] + \\mathbb E [\\varepsilon_t] = Ax_{t-1}$$\n",
     "\n",
     "Quant au calcul de la matrice de covariance :\n",
     "\n",
-    "\\begin{align}\n",
-    "\\mathbb V (X_t | (X_{t-1} = x_{t-1})) &= \\mathbb E ((X_t | (X_{t-1} = x_{t-1}))(X_t | (X_{t-1} = x_{t-1}))^T) \\\\\n",
-    "&= \\mathbb E ((Ax_{t-1} + \\varepsilon_t)(Ax_{t-1} + \\varepsilon_t)^T) \\\\\n",
-    "&= \\mathbb V(Ax_{t-1}) + \\mathbb V (\\varepsilon_t) + \\mathbb E((Ax_{t-1})\\varepsilon_t^T) + \\mathbb E((\\varepsilon_t (Ax_{t-1})^T))\n",
-    "\\end{align}\n",
+    "\\begin{align*}\n",
+    "\\mathbb V (X_t | (X_{t-1} = x_{t-1})) &= \\mathbb E [(X_t | (X_{t-1} = x_{t-1}) - \\mathbb E[X_t | (X_{t-1} = x_{t-1})])(X_t | (X_{t-1} = x_{t-1}) - \\mathbb E[X_t | (X_{t-1} = x_{t-1})])^T] \\\\\n",
+    "&= \\mathbb E [(Ax_{t-1} + \\varepsilon_t - Ax_{t-1})(Ax_{t-1} + \\varepsilon_t - Ax_{t-1})^T] \\\\\n",
+    "&= \\mathbb V (\\varepsilon_t) \\\\\n",
+    "&= Q\n",
+    "\\end{align*}\n",
     "\n",
-    "La variance de $Ax_{t-1}$ est nulle car c'est une constante, et les deux derniers termes sont nuls car il est supposé que les erreurs sont indépendantes de l'état du système et que $\\mathbb E (\\varepsilon_t) = 0$, donc la matrice résultante n'aura que des coefficients nuls résultant du produit des espérances (on peut faire le calcul coefficient par coefficient).\n",
-    "\n",
-    "Ainsi $\\mathbb V (X_t | (X_{t-1} = x_{t-1})) = \\mathbb V (\\varepsilon_t) = Q$, ce qui montre que $X_t| (X_{t-1} =x_{t-1})\\sim \\mathcal{N}(A x_{t-1}, Q)$.\n",
+    "Ce qui montre que $X_t| (X_{t-1} =x_{t-1})\\sim \\mathcal{N}(A x_{t-1}, Q)$.\n",
     "\n",
     "Le raisonnement est analogue pour montrer que $Y_t| X_t= x_t \\sim \\mathcal{N}(B x_t, R)$."
    ]
@@ -111,11 +110,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Réponse 2 :**\n",
+    "\n",
+    "De même qu'en question 1, $X_1$ est un vecteur gaussien comme combinaison linéaire de vecteurs gaussiens, donc il est caractérisé par son espérance et sa matrice de covariance. On a :\n",
+    "\n",
+    "$$ \\mathbb E [X_1] = \\mathbb E[AX_0 + \\varepsilon_1] = Am_0$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\mathbb V[X_1] &= \\mathbb E[(AX_0 + \\varepsilon_1 - Am_0)(AX_0 + \\varepsilon_1 - Am_0)^T] \\\\\n",
+    "&= \\mathbb V[AX_0] + \\mathbb V[\\varepsilon_1] + \\mathbb E[(AX_0 - Am_0)\\varepsilon_1^T] + \\mathbb E[\\varepsilon_1(AX_0 - Am_0)^T] \\\\\n",
+    "&= A\\mathbb V[X_0]A^T + Q \\\\\n",
+    "&= AP_0A^T + Q\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "En effet, on a fait l'hypothèse que les erreurs étaient indépendantes de l'état du système, donc comme $\\epsilon_1$ est d'espérance nulle, les deux derniers termes sont nuls (on pourrait faire le calcul coefficient par coefficient, qui nous donnerait des produits d'espérance dont $E[\\varepsilon_1] = 0$).\n",
+    "\n",
+    "***CALCUL POUR $X_1 | Y_1 = y_1$ A FAIRE***\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
